--- a/src/css/global.css
+++ b/src/css/global.css
@@ -6,7 +6,7 @@
 }
 
 * {
-  transition-duration: 0.3s;
+  transition-duration: 0.2s;
   outline: none;
   overflow-x: hidden;
 }
@@ -17,20 +17,20 @@
 
 .invisible {
   opacity: 0;
-  transition-duration: 0.3s;
+  transition-duration: 0.2s;
 }
 
 .invisible > * {
   opacity: 0;
-  transition-duration: 0.3s;
+  transition-duration: 0.2s;
 }
 
 .visible {
   opacity: 1;
-  transition-duration: 0.3s;
+  transition-duration: 0.2s;
 }
 
 .visible > * {
   opacity: 1;
-  transition-duration: 0.3s;
+  transition-duration: 0.2s;
 }
